The carried ST4 copies come from 19a77dd
ST4's copies search collects its node pool now: it kept a node for every DP
state it reached, and 98 per cent of them were unreachable by the time a
parse ended. Packing a 48 KB file with copies peaks at 1,386 MB where it
peaked at 6,472, and the Java tools pack it at -Xmx1g where they needed 12
GB. The bytes out are unchanged.

The Java and C# copies and 68k/ST4_wrap.S are re-vendored from that commit,
and the Go tree moves to github.com/odipar/st4/go@v0.1.1. The assembly
copy changed in its comments alone, which the image tests read back: the
twenty-two builds are the same bytes.

mvn test 108 green, ParityTest included, so the three trees still pack
byte for byte alike.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>