@@ -7,7 +7,7 @@ import java.util.Arrays;
 
 /**
  * Command-line ST4 packer. {@code -k1} is ZX1's unit size and packs to within
- * a few percent of jx1, which a test holds; {@code -k2} and {@code -k4} trade
+ * a few percent of jx1, which a test checks; {@code -k2} and {@code -k4} trade
  * ratio for a decoder that runs half or a quarter as many operations.
  */
 public final class St4 {
@@ -15,25 +15,27 @@ public final class St4 {
     private St4() {}
 
     public static void main(String[] args) {
-        System.out.println("ST4: aligned split-stream packer v7.0 by Robbert van Dalen, "
-                + "based on ZX1 v1.5 by Einar Saukas");
-
         int unit = 1;
         int offsetLimit = St4Format.MAX_OFFSET;
         int maxOpLength = St4Format.MAX_OP;
         int repeatIndex = -1;
         boolean copies = false;
+        int penalty = 0;
         double search = 0;
-        boolean forcedMode = false;
+        boolean silent = false;
         int i = 0;
         for (; i < args.length && args[i].startsWith("-"); i++) {
             switch (args[i]) {
-                case "-f" -> forcedMode = true;
+                case "-silent" -> silent = true;
                 case "-c" -> copies = true;
                 default -> {
                     if (args[i].startsWith("-c")) {
                         copies = true;
                         search = parseNumber(args[i].substring(2));
+                    } else if (args[i].startsWith("-p")) {
+                        // zero is a penalty the parse reads, and the one the
+                        // default parser charges, so it is not turned away
+                        penalty = parseIndex(args[i].substring(2));
                     } else if (args[i].startsWith("-k")) {
                         unit = parseNumber(args[i].substring(2));
                     } else if (args[i].startsWith("-m")) {
@@ -49,26 +51,30 @@ public final class St4 {
             }
         }
 
-        String outputName;
-        if (args.length == i + 1) {
-            outputName = args[i] + ".st4";
-        } else if (args.length == i + 2) {
-            outputName = args[i + 1];
-        } else {
+        if (args.length != i) {
             usage("""
-                    Usage: st4 [-f] [-c[S]] [-kK] [-mN] [-lN] [-rR] input [output.st4]
-                      -f      Force overwrite of output file
+                    Usage: st4 [-c[S]] [-kK] [-mN] [-lN] [-pN] [-rR] [-silent] \
+< input > output.st4
                       -c      Let a match beyond the -m window copy from the
                               literal stream; needs a decoder built with copies
                       -cS     The same, searching for S seconds for a better parse
                       -kK     Unit size: 1, 2 or 4 bytes (default 1). Lengths and
                               offsets count units, so the output is padded to a
                               whole number of them
+                      -pN     Charge N bits on every block besides what it
+                              writes, so the parse prefers fewer, longer ones:
+                              a decoder parses a block at a time
                       -mN     Limit back-references to N units
                       -lN     Split matches so no operation exceeds N units
                       -rR     Loop: after the last unit, the output continues
-                              from unit R, forever""");
+                              from unit R, forever
+                      -silent Leave the report off standard error""");
             return;
+        }
+
+        if (!silent) {
+            System.err.println("ST4: aligned split-stream packer v7.0 by Robbert van Dalen, "
+                    + "based on ZX1 v1.5 by Einar Saukas");
         }
 
         String problem = St4Format.checkUnit(unit);
@@ -83,17 +89,12 @@ public final class St4 {
 
         byte[] input;
         try {
-            input = Files.readAllBytes(Path.of(args[i]));
+            input = System.in.readAllBytes();
         } catch (IOException e) {
-            throw error("Cannot access input file " + args[i]);
+            throw error("Cannot read standard input");
         }
         if (input.length == 0) {
-            throw error("Empty input file " + args[i]);
-        }
-
-        Path outputPath = Path.of(outputName);
-        if (!forcedMode && Files.exists(outputPath)) {
-            throw error("Already existing output file " + outputName);
+            throw error("Empty input on standard input");
         }
 
         int[] units = Units.split(input, unit);
@@ -103,34 +104,49 @@ public final class St4 {
         }
         St4Compressor.Result result;
         int window = offsetLimit;
-        if (repeatIndex >= 0 && units.length - repeatIndex > offsetLimit) {
-            // The loop is longer than the window, so no match reaches across
-            // it and the caller replays the stream from the state it saved at
-            // the loop point. The loop is parsed on its own, so every pass
-            // sees the same history.
-            int[] intro = Arrays.copyOfRange(units, 0, repeatIndex);
-            int[] loop = Arrays.copyOfRange(units, repeatIndex, units.length);
-            result = St4Compressor.compressRewinding(
-                    intro.length == 0 ? null
-                            : parse(intro, unit, offsetLimit, maxOpLength, copies, search),
-                    parse(loop, unit, offsetLimit, maxOpLength, copies, search),
-                    units, unit, maxOpLength, repeatIndex, window);
-        } else {
-            // The loop fits the window: the end is an endless match back to
-            // the loop point.
-            result = St4Compressor.compress(
-                    parse(units, unit, offsetLimit, maxOpLength, copies, search), units,
-                    unit, maxOpLength, repeatIndex, window);
+        try {
+            if (repeatIndex >= 0 && units.length - repeatIndex > offsetLimit) {
+                // The loop is longer than the window, so no match reaches across
+                // it and the caller replays the stream from the state it saved at
+                // the loop point. The loop is parsed on its own, so every pass
+                // sees the same history.
+                int[] intro = Arrays.copyOfRange(units, 0, repeatIndex);
+                int[] loop = Arrays.copyOfRange(units, repeatIndex, units.length);
+                result = St4Compressor.compressRewinding(
+                        intro.length == 0 ? null
+                                : parse(intro, unit, offsetLimit, maxOpLength, copies, search, penalty, !silent),
+                        parse(loop, unit, offsetLimit, maxOpLength, copies, search, penalty, !silent),
+                        units, unit, maxOpLength, repeatIndex, window);
+            } else {
+                // The loop fits the window: the end is an endless match back to
+                // the loop point.
+                result = St4Compressor.compress(
+                        parse(units, unit, offsetLimit, maxOpLength, copies, search, penalty, !silent), units,
+                        unit, maxOpLength, repeatIndex, window);
+            }
+        } catch (OutOfMemoryError e) {
+            // The copies search makes a node a state reached, and a state is
+            // a position and an offset, so the heap it needs follows the
+            // window (doc/research.md, What the copies search costs in
+            // memory). The default heap is a quarter of the machine, which a
+            // wide window over a long input passes.
+            throw error("out of heap at " + units.length + " units and a window of "
+                    + window + (copies ? " with copies" : "")
+                    + ": name a narrower -m, or give java a larger -Xmx");
         }
 
         try {
-            Files.write(outputPath, container(result));
+            System.out.write(container(result));
+            System.out.flush();
         } catch (IOException e) {
-            throw error("Cannot write output file " + outputName);
+            throw error("Cannot write standard output");
+        }
+        if (silent) {
+            return;
         }
 
         int padded = Units.paddedLength(input.length, unit);
-        System.out.printf("Packed %d bytes%s into %d (%.1f%%): A %d, B %d, C %d, D %d, "
+        System.err.printf("Packed %d bytes%s into %d (%.1f%%): A %d, B %d, C %d, D %d, "
                 + "%d operations%s%n",
                 input.length, padded == input.length ? "" : " padded to " + padded,
                 result.packedSize(), 100.0 * result.packedSize() / input.length,
@@ -142,12 +158,12 @@ public final class St4 {
                         + (repeatIndex < 0 ? "" : ", loops from unit " + repeatIndex
                         + (result.rewindIndex() < 0 ? "" : " by rewind")));
         if (result.rewindIndex() >= 0) {
-            System.out.printf("The loop is longer than the -m%d window, so the decoder cannot "
+            System.err.printf("The loop is longer than the -m%d window, so the decoder cannot "
                     + "loop it alone: save its state at unit %d and restore it at unit %d, "
                     + "every pass%n", offsetLimit, repeatIndex, units.length);
         }
         if (result.longestOp() > maxOpLength) {
-            System.out.printf("Warning: longest operation is %d units, over the -l%d limit: "
+            System.err.printf("Warning: longest operation is %d units, over the -l%d limit: "
                     + "a literal run, which the format cannot split%n",
                     result.longestOp(), maxOpLength);
         }
@@ -159,17 +175,22 @@ public final class St4 {
      * seconds the search from there.
      */
     private static St4Block parse(int[] units, int unit, int window, int maxOpLength,
-                                  boolean copies, double seconds) {
-        if (!copies) {
-            return St4EventOptimizer.optimize(units, unit, window);
+                                  boolean copies, double seconds, int penalty, boolean progress) {
+        if (copies) {
+            return St4LiteralCopySearch.optimize(units, unit, window, maxOpLength, seconds, progress);
         }
-        return St4LiteralCopySearch.optimize(units, unit, window, maxOpLength, seconds, true);
+        if (penalty != 0) {
+            // the reference parser is the one that charges a block, and it
+            // reproduces the event-driven one's costs at a penalty of zero
+            return St4Optimizer.optimize(units, unit, window, progress, penalty);
+        }
+        return St4EventOptimizer.optimize(units, unit, window, progress);
     }
 
     /**
      * Twenty-eight bytes of header, then A, B, C and D, each on a long
      * boundary. No length is stored: a stream runs to the next, and the last
-     * to whatever the caller loads after the container. Public because other
+     * to what the caller loads after the container. Public because other
      * formats embed containers, many at once.
      */
     public static byte[] container(St4Compressor.Result result) {
